<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".view.MainActivity">

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/aplicativo_lista_vip_curso_android"
        android:textColor="#000000"
        android:textColorLink="#FF0303"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.058" />

    <EditText
        android:id="@+id/editPrimeiroNome"
        android:layout_width="380dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="text"
        android:shadowColor="#000000"
        android:text="@string/txt_hint_edit_primeiro_nome"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitulo"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/editSobrenome"
        android:layout_width="380dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="text"
        android:shadowColor="#000000"
        android:text="@string/txt_hint_edit_sobrenome"
        android:textColor="#000000"
        android:textColorHighlight="#000000"
        android:textColorHint="#000000"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPrimeiroNome"
        app:layout_constraintVertical_bias="0.01"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/editNomeDoCurso"
        android:layout_width="380dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:layout_marginTop="20dp"
        android:textColor="#000000"
        android:ems="10"
        android:importantForAutofill="no" android:inputType="text"
        android:text="@string/txt_hint_edit_nome_do_curso_desejado"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editSobrenome"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/editTelefone"
        android:layout_width="380dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:layout_marginTop="8dp"
        android:textColor="#000000"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="text"
        android:text="@string/txt_hint_edit_telefone_de_contato"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNomeDoCurso"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/btnSalvar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="#000000"
        android:backgroundTint="#000000"
        android:hapticFeedbackEnabled="true"
        android:text="@string/txt_button_salvar"
        android:textColorLink="#000000"
        app:iconTint="#000000"
        app:layout_constraintBottom_toTopOf="@+id/btnFinalizar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTelefone"
        app:toggleCheckedStateOnClick="true" />

    <Button
        android:id="@+id/btnLimpar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="#000000"
        android:backgroundTint="#050505"
        android:hapticFeedbackEnabled="true"
        android:shadowColor="#000000"
        android:text="@string/txt_button_limpar"
        android:textColorLink="#000000"
        app:iconTint="#000000"
        app:iconTintMode="add"
        app:layout_constraintBottom_toTopOf="@+id/btnFinalizar"
        app:layout_constraintEnd_toStartOf="@+id/btnSalvar"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTelefone"
        app:rippleColor="#000000"
        app:strokeColor="#000000"
        app:toggleCheckedStateOnClick="true" />

    <Button
        android:id="@+id/btnFinalizar"
        android:layout_width="319dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="#000000"
        android:backgroundTint="#000000"
        android:backgroundTintMode="add"
        android:hapticFeedbackEnabled="true"
        android:shadowColor="#000000"
        android:text="@string/txt_button_fializar"
        android:textColorHighlight="#000000"
        android:textColorHint="#000000"
        android:textColorLink="#000000"
        app:iconTint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTelefone"
        app:layout_constraintVertical_bias="0.813"
        app:rippleColor="#000000"
        app:strokeColor="#000000"
        app:toggleCheckedStateOnClick="true"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>